objects/jiffle__Briefing_Activity__c.object
<CustomObject>
    <description>Used to store Jiffle Briefing Activities</description>
    <fields>
        <fullName>jiffle__Activity_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Master</label>
        <referenceTo>jiffle__Event_Master__c</referenceTo>
        <relationshipLabel>Briefing Activities</relationshipLabel>
        <relationshipName>Briefing_Activities_AM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Activity_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Activity UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <referenceTo>jiffle__Meeting__c</referenceTo>
        <relationshipLabel>Briefing Activities</relationshipLabel>
        <relationshipName>Briefing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Additional_Info__c</fullName>
        <description>Used to  store extra information on briefing activity.</description>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Briefing</label>
        <referenceTo>jiffle__Briefing__c</referenceTo>
        <relationshipLabel>Briefing Activities</relationshipLabel>
        <relationshipName>Briefing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to Store Opportunity Id of the related Briefing activity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Briefing Activities</relationshipLabel>
        <relationshipName>Briefing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>jiffle__Event_Master__c</referenceTo>
        <relationshipLabel>Briefing Activities</relationshipLabel>
        <relationshipName>Briefing_ActivityTopic</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Briefing Activity</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Briefing Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefing Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>